--- a/index.html
+++ b/index.html
@@ -578,6 +578,56 @@ Desa Modayag Barat, Kec. Modayag<br></div>
 						<div class="elementor-gallery-item__overlay"></div>
 					</a>
 
+					<!-- 15 -->
+					<a class="e-gallery-item elementor-gallery-item elementor-animated-content" href="asset/img/galeri/15.jpg"
+						data-elementor-open-lightbox="yes" data-elementor-lightbox-slideshow="7d88896e"
+						data-elementor-lightbox-title="pexels-dimitri-kuliuk-949224"
+						data-e-action-hash="#elementor-action%3Aaction%3Dlightbox%26settings%3DeyJpZCI6MTMzLCJ1cmwiOiJodHRwczpcL1wvaW52aXN0b3J5LmNvbVwvd3AtY29udGVudFwvdXBsb2Fkc1wvMjAyMFwvMTFcL3BleGVscy1kaW1pdHJpLWt1bGl1ay05NDkyMjQuanBnIiwic2xpZGVzaG93IjoiN2Q4ODg5NmUifQ%3D%3D">
+						<div class="e-gallery-image elementor-gallery-item__image" data-thumbnail="asset/img/galeri/15.jpg" data-width="300"
+							data-height="200" aria-label="" role="img"></div>
+						<div class="elementor-gallery-item__overlay"></div>
+					</a>
+
+					<!-- 16 -->
+					<a class="e-gallery-item elementor-gallery-item elementor-animated-content" href="asset/img/galeri/16.jpg"
+						data-elementor-open-lightbox="yes" data-elementor-lightbox-slideshow="7d88896e"
+						data-elementor-lightbox-title="pexels-dimitri-kuliuk-949224"
+						data-e-action-hash="#elementor-action%3Aaction%3Dlightbox%26settings%3DeyJpZCI6MTMzLCJ1cmwiOiJodHRwczpcL1wvaW52aXN0b3J5LmNvbVwvd3AtY29udGVudFwvdXBsb2Fkc1wvMjAyMFwvMTFcL3BleGVscy1kaW1pdHJpLWt1bGl1ay05NDkyMjQuanBnIiwic2xpZGVzaG93IjoiN2Q4ODg5NmUifQ%3D%3D">
+						<div class="e-gallery-image elementor-gallery-item__image" data-thumbnail="asset/img/galeri/16.jpg" data-width="300"
+							data-height="200" aria-label="" role="img"></div>
+						<div class="elementor-gallery-item__overlay"></div>
+					</a>
+
+					<!-- 17 -->
+					<a class="e-gallery-item elementor-gallery-item elementor-animated-content" href="asset/img/galeri/17.jpg"
+						data-elementor-open-lightbox="yes" data-elementor-lightbox-slideshow="7d88896e"
+						data-elementor-lightbox-title="pexels-dimitri-kuliuk-949224"
+						data-e-action-hash="#elementor-action%3Aaction%3Dlightbox%26settings%3DeyJpZCI6MTMzLCJ1cmwiOiJodHRwczpcL1wvaW52aXN0b3J5LmNvbVwvd3AtY29udGVudFwvdXBsb2Fkc1wvMjAyMFwvMTFcL3BleGVscy1kaW1pdHJpLWt1bGl1ay05NDkyMjQuanBnIiwic2xpZGVzaG93IjoiN2Q4ODg5NmUifQ%3D%3D">
+						<div class="e-gallery-image elementor-gallery-item__image" data-thumbnail="asset/img/galeri/17.jpg" data-width="300"
+							data-height="200" aria-label="" role="img"></div>
+						<div class="elementor-gallery-item__overlay"></div>
+					</a>
+
+					<!-- 18 -->
+					<a class="e-gallery-item elementor-gallery-item elementor-animated-content" href="asset/img/galeri/18.jpg"
+						data-elementor-open-lightbox="yes" data-elementor-lightbox-slideshow="7d88896e"
+						data-elementor-lightbox-title="pexels-dimitri-kuliuk-949224"
+						data-e-action-hash="#elementor-action%3Aaction%3Dlightbox%26settings%3DeyJpZCI6MTMzLCJ1cmwiOiJodHRwczpcL1wvaW52aXN0b3J5LmNvbVwvd3AtY29udGVudFwvdXBsb2Fkc1wvMjAyMFwvMTFcL3BleGVscy1kaW1pdHJpLWt1bGl1ay05NDkyMjQuanBnIiwic2xpZGVzaG93IjoiN2Q4ODg5NmUifQ%3D%3D">
+						<div class="e-gallery-image elementor-gallery-item__image" data-thumbnail="asset/img/galeri/18.jpg" data-width="300"
+							data-height="200" aria-label="" role="img"></div>
+						<div class="elementor-gallery-item__overlay"></div>
+					</a>
+
+					<!-- 19 -->
+					<a class="e-gallery-item elementor-gallery-item elementor-animated-content" href="asset/img/galeri/19.jpg"
+						data-elementor-open-lightbox="yes" data-elementor-lightbox-slideshow="7d88896e"
+						data-elementor-lightbox-title="pexels-dimitri-kuliuk-949224"
+						data-e-action-hash="#elementor-action%3Aaction%3Dlightbox%26settings%3DeyJpZCI6MTMzLCJ1cmwiOiJodHRwczpcL1wvaW52aXN0b3J5LmNvbVwvd3AtY29udGVudFwvdXBsb2Fkc1wvMjAyMFwvMTFcL3BleGVscy1kaW1pdHJpLWt1bGl1ay05NDkyMjQuanBnIiwic2xpZGVzaG93IjoiN2Q4ODg5NmUifQ%3D%3D">
+						<div class="e-gallery-image elementor-gallery-item__image" data-thumbnail="asset/img/galeri/19.jpg" data-width="300"
+							data-height="200" aria-label="" role="img"></div>
+						<div class="elementor-gallery-item__overlay"></div>
+					</a>
+
 
 					</div>
 			</div>
