--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ Mr. (Alm) Wartomo Arsimen<br>
 				</div>
 				<div class="elementor-element elementor-element-cfd66a2 elementor-align-center jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-button" data-id="cfd66a2" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-button-wrapper">
+					<!-- <div class="elementor-button-wrapper">
 			<a class="elementor-button elementor-button-link elementor-size-xs" href="https://www.google.com/calendar/render?action=TEMPLATE&#038;text=The%20Wedding%20of%20Dwi%20%26%20Gia&#038;details&#038;dates=20231231T110000/20231231T160000&#038;location=Invistory%20Hotel,%20Jalan%20Jenderal%20Sudirman%20Kav%2001%20Kota%20Jakarta%20Selatan" target="_blank">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
@@ -365,7 +365,7 @@ Mr. (Alm) Wartomo Arsimen<br>
 						<span class="elementor-button-text">Add to Calendar</span>
 		</span>
 					</a>
-		</div>
+		</div> -->
 				</div>
 				</div>
 				<section class="has_ma_el_bg_slider elementor-section elementor-inner-section elementor-element elementor-element-9cff7a2 elementor-section-boxed elementor-section-height-default elementor-section-height-default jltma-glass-effect-no" data-id="9cff7a2" data-element_type="section">
@@ -384,13 +384,13 @@ Mr. (Alm) Wartomo Arsimen<br>
 				Friday, August 21, 2023<br>
 08.00 WITA<br>
 <strong>Rumah Mempelai Wanita</strong><br>
-Desa Modayag Barat, Kec. Modayag<br></div>
+Desa Modayag, Kec. Modayag<br></div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-aa93ad0 elementor-align-center jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-button" data-id="aa93ad0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="#" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://goo.gl/maps/nBV7MpsYKczoxN599" target="_blank">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="im im-location"></i>			</span>
@@ -414,13 +414,13 @@ Desa Modayag Barat, Kec. Modayag<br></div>
 				Friday, August 21, 2023<br>
 13.00 WITA<br>
 <strong>Rumah Mempelai Wanita</strong><br>
-Desa Modayag Barat, Kec. Modayag<br></div>
+Desa Modayag, Kec. Modayag<br></div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-aa93ad0 elementor-align-center jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-button" data-id="aa93ad0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="#" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://goo.gl/maps/nBV7MpsYKczoxN599" target="_blank">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="im im-location"></i>			</span>
