--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@ Mr. (Alm) Wartomo Arsimen<br>
 				<div class="elementor-element elementor-element-2e5f426 jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-text-editor" data-id="2e5f426" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				Friday, August 21, 2023<br>
+				Friday, August 25, 2023<br>
 08.00 WITA<br>
 <strong>Rumah Mempelai Wanita</strong><br>
-Desa Modayag, Kec. Modayag<br></div>
+Desa Modayag<br></div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-aa93ad0 elementor-align-center jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-button" data-id="aa93ad0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="button.default">
@@ -411,10 +411,10 @@ Desa Modayag, Kec. Modayag<br></div>
 				<div class="elementor-element elementor-element-2e5f426 jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-text-editor" data-id="2e5f426" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				Friday, August 21, 2023<br>
+				Friday, August 25, 2023<br>
 13.00 WITA<br>
 <strong>Rumah Mempelai Wanita</strong><br>
-Desa Modayag, Kec. Modayag<br></div>
+Desa Modayag<br></div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-aa93ad0 elementor-align-center jltma-glass-effect-no elementor-invisible elementor-widget elementor-widget-button" data-id="aa93ad0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:500}" data-widget_type="button.default">
