--- a/index.html
+++ b/index.html
@@ -13,35 +13,10 @@
 	<title>Pernikahan Dwi & Gia - Undangan Digital</title>
 	<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 	<meta property="og:locale" content="en_US" />
-	<meta property="og:type" content="article" />
-	<meta property="og:title" content="The Wedding Of Dwi & Gia" />
-	<meta property="og:description" content="WE ARE GETTING MARRIED Dwi &#038; Gia August 25, 2023" />
-	<meta property="og:site_name" content="Fritslx - Undangan Digital" />
-	<meta property="og:image" content="asset/img/cover/cover-depan.jpg" />
-	<!-- / Yoast SEO plugin. -->
-
-		<!-- This site uses the Google Analytics by MonsterInsights plugin v8.18 - Using Analytics tracking - https://www.monsterinsights.com/ -->
-		<!-- Note: MonsterInsights is not currently configured on this site. The site owner needs to authenticate with Google Analytics in the MonsterInsights settings panel. -->
-					<!-- No tracking code set -->
-				<!-- / Google Analytics by MonsterInsights -->
-		<script>
-/*! This file is auto-generated */
-!function(e,a,t){var n,r,o,i=a.createElement("canvas"),p=i.getContext&&i.getContext("2d");function s(e,t){var a=String.fromCharCode,e=(p.clearRect(0,0,i.width,i.height),p.fillText(a.apply(this,e),0,0),i.toDataURL());return p.clearRect(0,0,i.width,i.height),p.fillText(a.apply(this,t),0,0),e===i.toDataURL()}function c(e){var t=a.createElement("script");t.src=e,t.defer=t.type="text/javascript",a.getElementsByTagName("head")[0].appendChild(t)}for(o=Array("flag","emoji"),t.supports={everything:!0,everythingExceptFlag:!0},r=0;r<o.length;r++)t.supports[o[r]]=function(e){if(!p||!p.fillText)return!1;switch(p.textBaseline="top",p.font="600 32px Arial",e){case"flag":return s([127987,65039,8205,9895,65039],[127987,65039,8203,9895,65039])?!1:!s([55356,56826,55356,56819],[55356,56826,8203,55356,56819])&&!s([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]);case"emoji":return!s([129777,127995,8205,129778,127999],[129777,127995,8203,129778,127999])}return!1}(o[r]),t.supports.everything=t.supports.everything&&t.supports[o[r]],"flag"!==o[r]&&(t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&t.supports[o[r]]);t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&!t.supports.flag,t.DOMReady=!1,t.readyCallback=function(){t.DOMReady=!0},t.supports.everything||(n=function(){t.readyCallback()},a.addEventListener?(a.addEventListener("DOMContentLoaded",n,!1),e.addEventListener("load",n,!1)):(e.attachEvent("onload",n),a.attachEvent("onreadystatechange",function(){"complete"===a.readyState&&t.readyCallback()})),(e=t.source||{}).concatemoji?c(e.concatemoji):e.wpemoji&&e.twemoji&&(c(e.twemoji),c(e.wpemoji)))}(window,document,window._wpemojiSettings);
-</script>
-<style>
-img.wp-smiley,
-img.emoji {
-	display: inline !important;
-	border: none !important;
-	box-shadow: none !important;
-	height: 1em !important;
-	width: 1em !important;
-	margin: 0 0.07em !important;
-	vertical-align: -0.1em !important;
-	background: none !important;
-	padding: 0 !important;
-}
-</style>
+	<meta property="og:title" content="Judul Situs Web Anda">
+	<meta property="og:description" content="WE ARE GETTING MARRIED Dwi & Gia August 25, 2023">
+	<meta property="og:url" content="https://pernikahan-dwi-sugianty.vercel.app/">
+	<meta property="og:image" content="asset/img/cover/cover-depan.jpg">
 	<style class='custom-scrollbar' type='text/css'>#comments{height: auto !important;} #comments { max-height: 500px; overflow-y: auto; overflow-x: hidden;}</style><link rel='stylesheet' id='bdt-uikit-css'  href='asset/css/bdt-uikit.css' media='all' />
 <link rel='stylesheet' id='ep-helper-css'  href='asset/css/ep-helper-css.css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css'  href='asset/css/wp-block-library-css.css' media='all' />
@@ -1064,7 +1039,7 @@ var ElementPackConfig = {"ajaxurl":"https:\/\/invistory.com\/wp-admin\/admin-aja
 <script src='asset/js/share-link-js.js' id='share-link-js'></script>
 <script src='asset/js/elementor-dialog-js.js' id='elementor-dialog-js'></script>
 <script id='elementor-frontend-js-before'>
-var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false,"isScriptDebug":false},"i18n":{"shareOnFacebook":"Share on Facebook","shareOnTwitter":"Share on Twitter","pinIt":"Pin it","download":"Download","downloadImage":"Download image","fullscreen":"Fullscreen","zoom":"Zoom","share":"Share","playVideo":"Play Video","previous":"Previous","next":"Next","close":"Close","a11yCarouselWrapperAriaLabel":"Carousel | Horizontal scrolling: Arrow Left & Right","a11yCarouselPrevSlideMessage":"Previous slide","a11yCarouselNextSlideMessage":"Next slide","a11yCarouselFirstSlideMessage":"This is the first slide","a11yCarouselLastSlideMessage":"This is the last slide","a11yCarouselPaginationBulletMessage":"Go to slide"},"is_rtl":false,"breakpoints":{"xs":0,"sm":480,"md":768,"lg":1025,"xl":1440,"xxl":1600},"responsive":{"breakpoints":{"mobile":{"label":"Mobile Portrait","value":767,"default_value":767,"direction":"max","is_enabled":true},"mobile_extra":{"label":"Mobile Landscape","value":880,"default_value":880,"direction":"max","is_enabled":false},"tablet":{"label":"Tablet Portrait","value":1024,"default_value":1024,"direction":"max","is_enabled":true},"tablet_extra":{"label":"Tablet Landscape","value":1200,"default_value":1200,"direction":"max","is_enabled":false},"laptop":{"label":"Laptop","value":1366,"default_value":1366,"direction":"max","is_enabled":false},"widescreen":{"label":"Widescreen","value":2400,"default_value":2400,"direction":"min","is_enabled":false}}},"version":"3.14.1","is_static":false,"experimentalFeatures":{"a11y_improvements":true,"additional_custom_breakpoints":true,"container":true,"theme_builder_v2":true,"landing-pages":true,"page-transitions":true,"notes":true,"loop":true,"form-submissions":true,"e_scroll_snap":true},"urls":{"assets":"https:\/\/invistory.com\/wp-content\/plugins\/elementor\/assets\/"},"swiperClass":"swiper-container","settings":{"page":[],"editorPreferences":[]},"kit":{"active_breakpoints":["viewport_mobile","viewport_tablet"],"global_image_lightbox":"yes","lightbox_enable_counter":"yes","lightbox_enable_fullscreen":"yes","lightbox_enable_zoom":"yes","lightbox_enable_share":"yes","lightbox_title_src":"title","lightbox_description_src":"description"},"post":{"id":154,"title":"The%20Wedding%20Of%20A%20%7C%20Dwi%20-%20&%20Gia","excerpt":"","featuredImage":false}};
+var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false,"isScriptDebug":false},"i18n":{"shareOnFacebook":"Share on Facebook","shareOnTwitter":"Share on Twitter","pinIt":"Pin it","download":"Download","downloadImage":"Download image","fullscreen":"Fullscreen","zoom":"Zoom","share":"Share","playVideo":"Play Video","previous":"Previous","next":"Next","close":"Close","a11yCarouselWrapperAriaLabel":"Carousel | Horizontal scrolling: Arrow Left & Right","a11yCarouselPrevSlideMessage":"Previous slide","a11yCarouselNextSlideMessage":"Next slide","a11yCarouselFirstSlideMessage":"This is the first slide","a11yCarouselLastSlideMessage":"This is the last slide","a11yCarouselPaginationBulletMessage":"Go to slide"},"is_rtl":false,"breakpoints":{"xs":0,"sm":480,"md":768,"lg":1025,"xl":1440,"xxl":1600},"responsive":{"breakpoints":{"mobile":{"label":"Mobile Portrait","value":767,"default_value":767,"direction":"max","is_enabled":true},"mobile_extra":{"label":"Mobile Landscape","value":880,"default_value":880,"direction":"max","is_enabled":false},"tablet":{"label":"Tablet Portrait","value":1024,"default_value":1024,"direction":"max","is_enabled":true},"tablet_extra":{"label":"Tablet Landscape","value":1200,"default_value":1200,"direction":"max","is_enabled":false},"laptop":{"label":"Laptop","value":1366,"default_value":1366,"direction":"max","is_enabled":false},"widescreen":{"label":"Widescreen","value":2400,"default_value":2400,"direction":"min","is_enabled":false}}},"version":"3.14.1","is_static":false,"experimentalFeatures":{"a11y_improvements":true,"additional_custom_breakpoints":true,"container":true,"theme_builder_v2":true,"landing-pages":true,"page-transitions":true,"notes":true,"loop":true,"form-submissions":true,"e_scroll_snap":true},"urls":{"assets":""},"swiperClass":"swiper-container","settings":{"page":[],"editorPreferences":[]},"kit":{"active_breakpoints":["viewport_mobile","viewport_tablet"],"global_image_lightbox":"yes","lightbox_enable_counter":"yes","lightbox_enable_fullscreen":"yes","lightbox_enable_zoom":"yes","lightbox_enable_share":"yes","lightbox_title_src":"title","lightbox_description_src":"description"},};
 </script>
 <script src='asset/js/elementor-frontend-js.js' id='elementor-frontend-js'></script>
 <script src='asset/js/ep-modal-js.js' id='ep-modal-js'></script>
@@ -1073,9 +1048,6 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 <script src='asset/js/quiz-maker-sweetalert-js-js.js' id='quiz-maker-sweetalert-js-js'></script>
 <script src='asset/js/quiz-maker-rate-quiz-js.js' id='quiz-maker-rate-quiz-js'></script>
 <script src='asset/js/quiz-maker-functions.js-js.js' id='quiz-maker-functions.js-js'></script>
-<script id='quiz-maker-ajax-public-js-extra'>
-var quiz_maker_ajax_public = {"ajax_url":"https:\/\/invistory.com\/wp-admin\/admin-ajax.php","warningIcon":"https:\/\/invistory.com\/wp-content\/plugins\/quiz-maker\/public\/images\/warning.svg"};
-</script>
 <script src='asset/js/quiz-maker-ajax-public-js.js' id='quiz-maker-ajax-public-js'></script>
 <script id='quiz-maker-js-extra'>
 var quizLangObj = {"notAnsweredText":"You have not answered this question","areYouSure":"Do you want to finish the quiz? Are you sure?","sorry":"Sorry","unableStoreData":"We are unable to store your data","connectionLost":"Connection is lost","checkConnection":"Please check your connection and try again","selectPlaceholder":"Select an answer","shareDialog":"Share Dialog","passwordIsWrong":"Password is wrong!","expiredMessage":"The quiz has expired!","day":"day","days":"days","hour":"hour","hours":"hours","minute":"minute","minutes":"minutes","second":"second","seconds":"seconds","alreadyPassedQuiz":"You already passed this quiz.","requiredError":"This is a required question","avg":"avg","votes":"votes","startButtonText":"Start","defaultStartButtonText":"Start","redirectAfter":"Redirecting after","loadResource":"Can't load resource.","somethingWentWrong":"Maybe something went wrong."};
