--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:title" content="Judul Situs Web Anda">
 	<meta property="og:description" content="WE ARE GETTING MARRIED Dwi & Gia August 25, 2023">
-	<meta property="og:url" content="https://pernikahan-dwi-sugianty.vercel.app/">
-	<meta property="og:image" content="asset/img/cover/cover-depan.jpg">
+	<meta property="og:url" content="https://wedding-dwi-sugianty.vercel.app/">
+	<meta property="og:image" content="https://wedding-dwi-sugianty.vercel.app/asset/img/cover/cover-depan.jpg">
 	<style class='custom-scrollbar' type='text/css'>#comments{height: auto !important;} #comments { max-height: 500px; overflow-y: auto; overflow-x: hidden;}</style><link rel='stylesheet' id='bdt-uikit-css'  href='asset/css/bdt-uikit.css' media='all' />
 <link rel='stylesheet' id='ep-helper-css'  href='asset/css/ep-helper-css.css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css'  href='asset/css/wp-block-library-css.css' media='all' />
