--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<title>Pernikahan Dwi & Gia - Undangan Digital</title>
 	<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 	<meta property="og:locale" content="en_US" />
-	<meta property="og:title" content="Judul Situs Web Anda">
+	<meta property="og:title" content="Wedding Dwi & Gia">
 	<meta property="og:description" content="WE ARE GETTING MARRIED Dwi & Gia August 25, 2023">
 	<meta property="og:url" content="https://wedding-dwi-sugianty.vercel.app/">
 	<meta property="og:image" content="https://wedding-dwi-sugianty.vercel.app/asset/img/cover/cover-depan.jpg">
