--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 	<!-- This site is optimized with the Yoast SEO plugin v15.4 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Pernikahan Dwi & Gia - Undangan Digital</title>
 	<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-	<meta property="og:locale" content="en_US" />
 	<meta property="og:title" content="Wedding Dwi & Gia">
 	<meta property="og:description" content="WE ARE GETTING MARRIED Dwi & Gia August 25, 2023">
-	<meta property="og:url" content="https://wedding-dwi-sugianty.vercel.app/">
-	<meta property="og:image" content="https://wedding-of-dwi-gia.vercel.app/asset/img/cover/cover-depan.jpg">
+	<meta property="og:url" content="http://wedding-dwi-sugianty.vercel.app/">
+	<meta property="og:image" content="/asset/img/cover/cover-depan.jpg">
 	<style class='custom-scrollbar' type='text/css'>#comments{height: auto !important;} #comments { max-height: 500px; overflow-y: auto; overflow-x: hidden;}</style><link rel='stylesheet' id='bdt-uikit-css'  href='asset/css/bdt-uikit.css' media='all' />
 <link rel='stylesheet' id='ep-helper-css'  href='asset/css/ep-helper-css.css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css'  href='asset/css/wp-block-library-css.css' media='all' />
