--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body.custom-background { background-color: #fff; }
 				<div class="elementor-widget-container">
 					<div class="elementor-cta">
 					<div class="elementor-cta__bg-wrapper">
-				<div class="elementor-cta__bg elementor-bg" style="background-image: url(asset/img/pasangan/pria.jpg);" role="img" aria-label="pexels-studio-negarin-3650423"></div>
+				<div class="elementor-cta__bg elementor-bg" style="background-image: url(asset/img/pasangan/pria.webp);" role="img" aria-label="pexels-studio-negarin-3650423"></div>
 				<div class="elementor-cta__bg-overlay"></div>
 			</div>
 							<div class="elementor-cta__content">
@@ -252,7 +252,7 @@ Mr. Muchdyantoro<br>
 				<div class="elementor-widget-container">
 					<div class="elementor-cta">
 					<div class="elementor-cta__bg-wrapper">
-				<div class="elementor-cta__bg elementor-bg" style="background-image: url(asset/img/pasangan/wanita.jpg);" role="img" aria-label="pexels-studio-negarin-3650423"></div>
+				<div class="elementor-cta__bg elementor-bg" style="background-image: url(asset/img/pasangan/wanita.webp);" role="img" aria-label="pexels-studio-negarin-3650423"></div>
 				<div class="elementor-cta__bg-overlay"></div>
 			</div>
 							<div class="elementor-cta__content">
